add some moar info

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
             <div class="container">
                 <div class="row">
                     <div class="footer-col col-md-4">
-                        <h3>haha i am everywhere xD </h3>
+                        <h3> Contact me </h3>
                         <ul class="list-inline">
                             <li>
                                 <a href="https://www.instagram.com/aswin_a_s__" class="btn-social btn-outline" target="_blank"><i class="fa fa-fw fa-instagram"></i></a>
@@ -200,6 +200,9 @@
                             </li>
                             <li>
                                 <a href="https://twitter.com/aswin_a_s__" class="btn-social btn-outline"><i class="fa fa-fw fa-twitter"></i></a>
+                            </li>
+                            <li>
+                                <a href="https://github.com/aswin7469" class="btn-social btn-outline"><i class="fa fa-fw fa-github"></i></a>
                             </li>
                         </ul>
                     </div>
@@ -317,22 +320,21 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Project Title</h2>
+                            <h2>Pie4zukku</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/circus.png" class="img-responsive img-centered" alt="">
-                            <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or
-                                you can purchase the entire set with 146 icons for only $12!</p>
+                            <img src="img/portfolio/pie4zukku.png" class="img-responsive img-centered" alt="">
+                            <p>Pie4zukku is a team of developers & testers intended to make android pie development of Lenovo zuk z2 plus better . In the End of Pie era , we were able to bringup more pie roms & 4.4 kernels for zuk making way for Q4zukku </p>
                             <ul class="list-inline item-details">
-                                <li>Client:
-                                    <strong><a href="http://startbootstrap.com">Yourname</a>
+                                <li>founded by :
+                                    <strong><p> Aswin A S & Yashodhan Sewarkhar</p>
                                     </strong>
                                 </li>
-                                <li>Date:
-                                    <strong><a href="http://startbootstrap.com">April 2014</a>
+                                <li>Downloads:
+                                    <strong><a href="https://t.me/zukscreenshots">channel</a>
                                     </strong>
                                 </li>
-                                <li>Service:
-                                    <strong><a href="http://startbootstrap.com">Web Development</a>
+                                <li>contact us :
+                                    <strong><a href="https://t.me/Q4zukku">telegram chat</a>
                                     </strong>
                                 </li>
                             </ul>
@@ -393,60 +395,21 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Project Title</h2>
+                            <h2>Evolution-X [unofficial]</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/safe.png" class="img-responsive img-centered" alt="">
-                            <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or
-                                you can purchase the entire set with 146 icons for only $12!</p>
+                            <img src="img/portfolio/evo.png" class="img-responsive img-centered" alt="">
+                            <p>Pixel UI, Q vibes , Customization and more. We are Evolution X!</p>
                             <ul class="list-inline item-details">
-                                <li>Client:
-                                    <strong><a href="http://startbootstrap.com">Yourname</a>
+                                <li>Downloads:
+                                    <strong><a href="https://sourceforge.net/projects/aswin-a-s/files/z2_plus/shitty-random-builds/">souce forge</a>
                                     </strong>
                                 </li>
-                                <li>Date:
-                                    <strong><a href="http://startbootstrap.com">April 2014</a>
+                                <li>last updated:
+                                    <strong><a href="https://t.me/zukscreenshots/979">22/12/2019</a>
                                     </strong>
                                 </li>
-                                <li>Service:
-                                    <strong><a href="http://startbootstrap.com">Web Development</a>
-                                    </strong>
-                                </li>
-                            </ul>
-                            <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="portfolio-modal modal fade" id="portfolioModal6" tabindex="-1" role="dialog" aria-hidden="true">
-        <div class="modal-content">
-            <div class="close-modal" data-dismiss="modal">
-                <div class="lr">
-                    <div class="rl">
-                    </div>
-                </div>
-            </div>
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-8 col-lg-offset-2">
-                        <div class="modal-body">
-                            <h2>Project Title</h2>
-                            <hr class="star-primary">
-                            <img src="img/portfolio/submarine.png" class="img-responsive img-centered" alt="">
-                            <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or
-                                you can purchase the entire set with 146 icons for only $12!</p>
-                            <ul class="list-inline item-details">
-                                <li>Client:
-                                    <strong><a href="http://startbootstrap.com">Yourname</a>
-                                    </strong>
-                                </li>
-                                <li>Date:
-                                    <strong><a href="http://startbootstrap.com">April 2014</a>
-                                    </strong>
-                                </li>
-                                <li>Service:
-                                    <strong><a href="http://startbootstrap.com">Web Development</a>
+                                <li>Discussion:
+                                    <strong><a href="https://forum.xda-developers.com/lenovo-zuk-z2/development/evolution-x-3-2-z2plus-treble-t4000235">XDA thread</a>
                                     </strong>
                                 </li>
                             </ul>
