move "contact us" section to a better place

--- a/index.html
+++ b/index.html
@@ -82,6 +82,35 @@
         </div>
     </header>
 
+     <!-- contact us -->
+    <footer class="text-center">
+        <div class="footer-above">
+            <div class="container">
+                <div class="row">
+                    <div class="footer-col col-md-4">
+                        <h3> Contact me </h3>
+                        <ul class="list-inline">
+                            <li>
+                                <a href="https://www.instagram.com/aswin_a_s__" class="btn-social btn-outline" target="_blank"><i class="fa fa-fw fa-instagram"></i></a>
+                            </li>
+                            <li>
+                                <a href="https://www.facebook.com/aswin.a.kurup" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a>
+                            </li>
+                            <li>
+                                <a href="https://twitter.com/aswin_a_s__" class="btn-social btn-outline"><i class="fa fa-fw fa-twitter"></i></a>
+                            </li>
+                            <li>
+                                <a href="https://github.com/aswin7469" class="btn-social btn-outline"><i class="fa fa-fw fa-github"></i></a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="footer-col col-md-4">
+                        <p><a href="https://github.com/aswin7469/aswin7469.github.io">hosted on github</a>.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
     <!-- Portfolio Grid Section -->
     <section id="portfolio">
         <div class="container">
@@ -182,30 +211,11 @@
         </div>
     </section>
 
-    <!-- Contact Section -->
-
     <!-- Footer -->
     <footer class="text-center">
         <div class="footer-above">
             <div class="container">
                 <div class="row">
-                    <div class="footer-col col-md-4">
-                        <h3> Contact me </h3>
-                        <ul class="list-inline">
-                            <li>
-                                <a href="https://www.instagram.com/aswin_a_s__" class="btn-social btn-outline" target="_blank"><i class="fa fa-fw fa-instagram"></i></a>
-                            </li>
-                            <li>
-                                <a href="https://www.facebook.com/aswin.a.kurup" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a>
-                            </li>
-                            <li>
-                                <a href="https://twitter.com/aswin_a_s__" class="btn-social btn-outline"><i class="fa fa-fw fa-twitter"></i></a>
-                            </li>
-                            <li>
-                                <a href="https://github.com/aswin7469" class="btn-social btn-outline"><i class="fa fa-fw fa-github"></i></a>
-                            </li>
-                        </ul>
-                    </div>
                     <div class="footer-col col-md-4">
                         <p><a href="https://github.com/aswin7469/aswin7469.github.io">hosted on github</a>.</p>
                     </div>
