add telegram & xda to contact section

--- a/index.html
+++ b/index.html
@@ -101,11 +101,14 @@
                             </li>
                             <li>
                                 <a href="https://github.com/aswin7469" class="btn-social btn-outline"><i class="fa fa-fw fa-github"></i></a>
+                            <li>
+                                <a href="https://t.me/aswin_a_s" class="btn-social btn-outline"><i class="fa fa-fw fa-telegram"></i></a>
+                            <li>
+                                <a href="https://forum.xda-developers.com/member.php?u=8499818" class="btn-social btn-outline"><i class="fa fa-fw fa-xda"></i></a>
                             </li>
                         </ul>
                     </div>
                     <div class="footer-col col-md-4">
-                        <p><a href="https://github.com/aswin7469/aswin7469.github.io">hosted on github</a>.</p>
                     </div>
                 </div>
             </div>
